--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -174,7 +174,7 @@
 
       <div id = "middle-header">
         <!-- Search on header -->
-        <form action="{% url 'search' %}" method="GET">
+        <form class = "form-search-header" action="{% url 'search' %}" method="GET">
           {% csrf_token %}
           <input id = "header-search" 
           name = "header-search"
@@ -182,11 +182,10 @@
           placeholder="Search recipes"
           >
           <input type="submit" style="display:none"/>
+          <button type = "button" id = "search-btn-header" onclick="openSearchOnHeader()">
+            <img id = "search-icon-header" src="{% static '/icons/search.png' %}" alt="Search-icon">
+          </button>
         </form>
-
-        <button id = "search-btn-header" onclick="openSearchOnHeader()">
-          <img id = "search-icon-header" src="{% static '/icons/search.png' %}" alt="Search-icon">
-        </button>
       </div>
 
       <div id = "right-header">
@@ -822,15 +821,17 @@
     document.getElementById("header").style.height = "50px";
     document.getElementById("main").style.paddingLeft = "0";
     document.getElementById("main").style.paddingTop = "50px";
-    document.getElementById("header-search").style.opacity = "0";
-    document.getElementById("search-btn-header").style.marginLeft = "425px";
 
     document.getElementById("header").style.overflow = "visible";
-
     document.getElementById("you-may-like-recipes-grid").style.gridTemplateColumns = "auto auto auto auto";
     }
 
   function openNav() {
+  
+    document.getElementById("header-search").style.opacity = "0";
+    document.getElementById("middle-header").style.justifyContent = "right";
+    document.getElementById("search-btn-header").style.display = "block";
+    
     document.getElementById("sidebar").style.width = "200px";
     document.getElementById("header").style.height = "0";
     document.getElementById("main").style.paddingTop = "0";
@@ -841,11 +842,11 @@
   }
 
   function openSearchOnHeader(){
-    document.getElementById("header-search").style.display = "block";
     document.getElementById("header-search").style.opacity = "1";
-    document.getElementById("search-btn-header").style.marginLeft = "-35px"; 
-    document.getElementById("search-icon-header").style.width = "18px";
-    document.getElementById("search-icon-header").style.height = "18px";
+    document.getElementById("header-search").style.display = "block";
+    document.getElementById("search-btn-header").style.display = "none";
+    document.getElementById("middle-header").style.justifyContent = "center";
+    
   }
 
   function Scroll(elementId, distance){
