--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -44,23 +44,20 @@
 
       <div id="middle-header">
         <!-- HEADER SEARCH -->
-        <form action="/search.html">
-          <input
-            id="header-search"
-            name="header-search"
-            type="text"
-            placeholder="Search recipes"
-          />
-          <input type="submit" style="display: none" />
+         <!-- Search on header -->
+         <form class = "form-search-header" action="{% url 'search' %}" method="GET">
+          {% csrf_token %}
+          <input id = "header-search" 
+          name = "header-search"
+          type="text" 
+          placeholder="Search recipes"
+          >
+          <input type="submit" style="display:none"/>
+          <button type = "button" id = "search-btn-header" onclick="openSearchOnHeader()">
+            <img id = "search-icon-header" src="{% static '/icons/search.png' %}" alt="Search-icon">
+          </button>
         </form>
 
-        <button id="search-btn-header" onclick="openSearchOnHeader()">
-          <img
-            id="search-icon-header"
-            src="{% static '/icons/search.png' %}"
-            alt="Search-icon"
-          />
-        </button>
       </div>
 
       <div id="right-header">
@@ -449,13 +446,15 @@
         document.getElementById("sidebar").style.width = "0";
         document.getElementById("header").style.height = "50px";
         document.getElementById("main").style.padding = "60px 0 0 0";
-        document.getElementById("header-search").style.opacity = "0";
-        document.getElementById("search-btn-header").style.marginLeft = "425px";
         document.getElementById("main").style.marginTop = "0";
         document.getElementById("header").style.overflow = "visible";
       }
 
       function openNav() {
+        document.getElementById("header-search").style.opacity = "0";
+        document.getElementById("middle-header").style.justifyContent = "right";
+        document.getElementById("search-btn-header").style.display = "block";
+
         document.getElementById("sidebar").style.width = "200px";
         document.getElementById("header").style.height = "0";
         document.getElementById("header").style.overflow = "hidden";
@@ -463,11 +462,11 @@
         document.getElementById("main").style.marginTop = "50px";
       }
 
-      function openSearchOnHeader() {
+      function openSearchOnHeader(){
         document.getElementById("header-search").style.opacity = "1";
-        document.getElementById("search-btn-header").style.marginLeft = "-35px";
-        document.getElementById("search-icon-header").style.width = "18px";
-        document.getElementById("search-icon-header").style.height = "18px";
+        document.getElementById("header-search").style.display = "block";
+        document.getElementById("search-btn-header").style.display = "none";
+        document.getElementById("middle-header").style.justifyContent = "center";
       }
 
       function displayDropdown() {
